# KstockSysytem

./: .env.example  .env.v71.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  launcher.py  package-lock.json  pyproject.toml  requirements.txt  run_backtest_ui.py  키움 REST API 문서.xlsx
config/: feature_flags.yaml  holidays.json
decisions/: template.md
docs/: ARCHITECTURE.md  AWS_LAUNCHER_PLAN.md  BACKTEST_GUIDE.md  CHANGELOG.md  CODE_REVIEW_REPORT.md  DEPLOYMENT_GUIDE.md  OPENCLAW_GUIDE.md  SIGNAL_SYSTEM_GUIDE.md  SYSTEM_ARCHITECTURE.md  SYSTEM_IMPLEMENTATION_GUIDE.md  TECHNICAL_DOCUMENTATION.md  TRADING_SYSTEM_FRAMEWORK.md  TROUBLESHOOTING.md  api_sheets.txt
docs/api/: README.md  all_api_specs.json  api_specs.json  au10001.md  auth.md  condition.md  ka10075.md  ka10076.md  ka10171.md  ka10172.md  ka10173.md  ka10174.md  key_apis.txt  kt00001.md  kt00004.md  kt00005.md  kt10000.md  kt10000_detail.json  kt10001.md  kt10002.md  kt10003.md  order.md  websocket.md  키움 REST API 문서.xlsx
docs/charts/: generate_charts.py
docs/reference/: example_chat_command.py  example_check_n_buy.py  example_check_n_sell.py  example_main.py  example_rt_search.py
docs/v71/: 00_CLAUDE_CODE_GENERATION_PROMPT.md  01_PRD_MAIN.md  02_TRADING_RULES.md  03_DATA_MODEL.md  04_ARCHITECTURE.md  05_MIGRATION_PLAN.md  06_AGENTS_SPEC.md  07_SKILLS_SPEC.md  08_HARNESS_SPEC.md  09_API_SPEC.md  10_UI_GUIDE.md  10_UI_GUIDE_CARBON.md  11_REPORTING.md  12_SECURITY.md  13_APPENDIX.md  CLAUDE_DESIGN_PROMPT.md  HOW_TO_INSTRUCT_CLAUDE_CODE.md  IMPLEMENTATION_STATUS_REPORT_2026-04-27.md  KIWOOM_API_ANALYSIS.md  README.md  WORK_LOG.md
frontend/: .gitignore  CLAUDE_DESIGN_HANDOFF_README.md  README.md  V7.1 Dashboard.html  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend-prototype/: HANDOFF.md  MIGRATION_NOTES.md
frontend/src/: App.tsx  main.tsx
migrations/: v2.5_add_technical_stop_columns.sql
scripts/: analyze_277810.ps1  analyze_all_pool.ps1  check_and_migrate_v25.py  check_change_rate.py  check_db_counts.py  check_rvol_simple.py  check_signal_detail.ps1  check_signal_logs.ps1  check_signal_process.ps1  dev_run_local.py  dev_seed.py  diag_db_migrations.py  get_pool.ps1  log_file_change.py  migrate_env_to_v71.py  run_analyze.ps1  seed_stocks.py  start_dev.ps1  temp_analyze.py  test_api_positions.py  test_condition.py  test_core.py  test_telegram.py
scripts/admin/: create_admin.ps1  create_admin.py  verify_login.ps1  verify_login.py
scripts/backtest/: sniper_trap_daily.py  sniper_trap_intraday.py  sniper_trap_intraday_december.py
scripts/db/: README.md  v71_full_schema_2026-04-27.sql
scripts/deploy/: apply_v71_migrations.py  aws_archive_v70.ps1  boot_smoke_v71.ps1  check_api_structure.ps1  check_code.ps1  check_code2.ps1  check_db.ps1  check_db_server.ps1  check_deployed.ps1  check_env.ps1  check_invariants.ps1  check_logs.ps1  check_logs_range.ps1  check_processes.ps1  check_reset_logs.ps1  config.bat  connect.bat  deploy.bat  deploy.ps1  first-deploy.bat  hotfix.ps1  kill_force.ps1  kill_orphan.ps1  logs.bat  recent_logs.ps1  restart_and_watch.ps1  rollback.bat  search_logs.ps1  setup_v71.ps1  start_service.ps1  status.bat  status.ps1  stop_service.ps1  v71.service
scripts/harness/: __init__.py  _common.py  dead_code_detector.py  dependency_cycle_detector.py  feature_flag_enforcer.py  naming_collision_detector.py  run_all.py  schema_migration_validator.py  storage_invariant_enforcer.py  test_coverage_enforcer.py  trading_rule_enforcer.py
scripts/openclaw/: switch-model.ps1
scripts/server/: cleanup.sh  health-check.sh  install.sh  k-stock-trading.service  rollback.sh  setup.sh
src/: __init__.py  main.py
src/api/: __init__.py  auth.py  client.py  websocket.py
src/core/: __init__.py  atr_alert_manager.py  auto_screener.py  background_task_manager.py  candle_builder.py  condition_search_handler.py  constants.py  exit_coordinator.py  exit_manager.py  indicator.py  indicator_library.py  indicator_purple.py  manual_command_handler.py  market_monitor.py  market_schedule.py  missed_signal_tracker.py  order_executor.py  position_manager.py  position_recovery_manager.py  position_sync_manager.py  realtime_data_manager.py  risk_manager.py  signal_detector.py  signal_detector_purple.py  signal_pool.py  signal_processor.py  strategy_orchestrator.py  subscription_manager.py  system_health_monitor.py  trading_engine.py  universe.py  v7_signal_coordinator.py  watermark_manager.py  wave_harvest_exit.py  websocket_manager.py
src/database/: __init__.py  connection.py  models.py  models_v71.py  repository.py
src/notification/: __init__.py  notification_queue.py  reporter.py  telegram.py  templates.py
src/scheduler/: __init__.py
src/strategy/: __init__.py
src/utils/: config.py  exceptions.py  feature_flags.py  logger.py
src/web/: __init__.py
strategies/: __init__.py
tests/: test_abc_conformance.py  test_background_task_manager.py  test_exit_coordinator.py  test_indicator_purple.py  test_notification_fixes.py  test_notification_queue.py  test_orchestrator_wiring.py  test_position_sync_manager.py  test_signal_detector_purple.py  test_signal_pool.py  test_signal_processor.py  test_strategy_orchestrator.py  test_strategy_v6.py  test_strategy_v7.py  test_v7_signal_coordinator.py  test_watermark_manager.py  test_wave_harvest_exit.py  test_websocket_manager.py
tests/v71/: _fakes.py  conftest.py  test_avg_price_skill.py  test_box_entry_skill.py  test_box_manager.py  test_box_state_machine.py  test_exit_calc_skill.py  test_feature_flags.py  test_notification_skill.py  test_p_wire_box_4_core.py  test_reconciliation_skill.py  test_v71_box_entry_detector.py  test_v71_box_strategies.py  test_v71_buy_executor.py  test_v71_circuit_breaker.py  test_v71_constants.py  test_v71_daily_summary.py  test_v71_exit_calculator.py  test_v71_exit_executor.py  test_v71_monthly_review.py  test_v71_notification_queue.py  test_v71_notification_repository.py  test_v71_notification_service.py  test_v71_position_manager.py  test_v71_realclock.py  test_v71_reconciler.py  (+5 more)
(+376 files in other folders)
