[project]
name = "k_stock_trading"
version = "0.1.0"
description = "키움증권 REST API 기반 국내 주식 자동매매 시스템"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "structlog>=23.2.0",
    "pandas>=2.0.0",
    "tenacity>=8.2.0",
    # V7.1 Phase 5 -- Web Backend
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyotp>=2.9.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "types-requests>=2.31.0",
    "pandas-stubs>=2.0.0",
    "pre-commit>=3.5.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ========================
# Ruff 설정 (린터)
# ========================
[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise-without-from-inside-except
]

[tool.ruff.isort]
known-first-party = ["src"]

# Phase 2 stubs raise NotImplementedError after gating on a feature flag,
# so __init__ parameters look "unused" until Phase 3 wires the body in.
# Re-enable ARG when each module's implementation lands.
[tool.ruff.per-file-ignores]
"src/core/v71/box/*.py" = ["ARG001", "ARG002"]
"src/core/v71/strategies/*.py" = ["ARG001", "ARG002"]
"src/core/v71/exit/*.py" = ["ARG001", "ARG002"]
"src/core/v71/position/*.py" = ["ARG001", "ARG002"]
"src/core/v71/skills/*.py" = ["ARG001", "ARG002"]
"src/core/v71/path_manager.py" = ["ARG001", "ARG002"]
"src/core/v71/vi_monitor.py" = ["ARG001", "ARG002"]
"src/core/v71/event_logger.py" = ["ARG001", "ARG002"]
"src/core/v71/restart_recovery.py" = ["ARG001", "ARG002"]
"src/core/v71/audit_scheduler.py" = ["ARG001", "ARG002"]

# ========================
# MyPy 설정 (타입 체크)
# ========================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "websockets.*",
    "structlog.*",
]
ignore_missing_imports = true

# ========================
# Pytest 설정
# ========================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ========================
# Coverage 설정
# ========================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
